[package]
name = "cch23-estym"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
regex = "1.10.2"
http = "1.0.0"
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde_derive = { version = "1.0.193", features = [] }
rocket-multipart-form-data = "0.10.7"
image = "0.24.7"